--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,30 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<%# index page %>
+<%#= link_to 'Reservations Index', reservations_path %>
+
+<%# show page for first reservation %>
+<%#= link_to '1st Reservation Show page', reservation_path %>
+
+<div class="container-fluid p-0 d-flex flex-column" style="background-color: pink; height: 100%">
+  <div class="container-fluid d-flex h-50 justify-content-center" style="background-color: blue;">
+    <h5 class="align-self-center">Home Page for Concierge-L</h5>
+  </div>
+
+  <div class="container-fluid h-50 justify-content-center">
+    <ul>
+      <li><button type="button" class="btn btn-primary mt-2">
+        <%= link_to 'Reservations Index', reservations_path %></button>
+      </li>
+      <li><button type="button" class="btn btn-secondary mt-2">1st reservation</button></li>
+      <li><button type="button" class="btn btn-warning mt-2">chat</button></li>
+      <li><button type="button" class="btn btn-success mt-2">X</button></li>
+      <li><button type="button" class="btn btn-danger mt-2">X</button></li>
+      <li><button type="button" class="btn btn-info mt-2">X</button></li>
+      <li><button type="button" class="btn btn-light mt-2">X</button></li>
+      <li><button type="button" class="btn btn-dark mt-2">X</button></li>
+
+    </ul>
+  </div>
+
+
+</div>
