--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <%# show page for first reservation %>
 <%#= link_to '1st Reservation Show page', reservation_path %>
-
+<%= render 'shared/navbar' %>
 <div class="container-fluid p-0 d-flex flex-column" style="background-color: pink; height: 100%">
   <div class="container-fluid d-flex h-50 justify-content-center" style="background-color: blue;">
     <h5 class="align-self-center">Home Page for Concierge-L</h5>
@@ -12,7 +12,7 @@
 
   <div class="container-fluid h-50 justify-content-center">
     <ul>
-      <li><button type="button" class="btn btn-primary mt-2">
+      <li><button type="button" class="btn btn-outline-primary mt-2">
         <%= link_to 'Reservations Index', reservations_path %></button>
       </li>
       <li><button type="button" class="btn btn-secondary mt-2">1st reservation</button></li>
