reservations index changed

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -2,6 +2,6 @@
 
 <ol>
   <% @reservations.each do |reservation| %>
-    <li><%= reservation.user.first_name %></li>
+    <li><%= link_to "#{reservation.user.first_name}'s booking:", reservation_path(reservation) %></li>
   <% end %>
 </ol>
