--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,14 +1,27 @@
-<h1>Current Stay</h1>
-<p>Check in: <%= @reservation.check_in_date.strftime("%b %d (%a) #{(@reservation.arrival_time + 9.hours).strftime("%l%p")}~") %></p>
-<p>Check out: <%= @reservation.check_out_date.strftime("%b %d (%a) ~#{(@reservation.departure_time + 9.hours).strftime("%l%p")}") %></p>
-<p>Address: <%= @reservation.hotel.address %></p>
-<p> <%= @reservation.hotel.name %> </p>
-<p>Room Number: <%= @reservation.room_number %></p>
-<p>Reservation Number: <%= @reservation.reservation_number %></p>
-<p>Smartlock & Online Check-in: Please read before arrival</p>
-<p>Amenities </p>
-<button>Essentials</button>
-<button>Bed and Bath</button>
-<button>Kitchen</button>
-<button>Others</button>
-<button class="btn btn-primary">Chat with L</button>
+<div class="container-fluid">
+  <h1>Current Stay</h1>
+  <p>Check in: <%= @reservation.check_in_date.strftime("%b %d (%a) #{(@reservation.arrival_time + 9.hours).strftime("%l%p")}~") %></p>
+  <p>Check out: <%= @reservation.check_out_date.strftime("%b %d (%a) ~#{(@reservation.departure_time + 9.hours).strftime("%l%p")}") %></p>
+  <p>Address: <%= @reservation.hotel.address %></p>
+  <p> <%= @reservation.hotel.name %> </p>
+  <p>Room Number: <%= @reservation.room_number %></p>
+  <p>Reservation Number: <%= @reservation.reservation_number %></p>
+  <p>Smartlock & Online Check-in: Please read before arrival</p>
+  <p>Amenities </p>
+  <button>Essentials</button>
+  <button>Bed and Bath</button>
+  <button>Kitchen</button>
+  <button>Others</button>
+  <button class="btn btn-primary">Chat with L</button>
+</div>
+<div class="container-fluid">
+  <h1>Articles:</h1>
+</div>
+<div class="container-fluid">
+  <% @reservation.hotel.articles.where(title: 'house_manual').each do |article| %>
+    <p><%= article.title.capitalize.gsub('_', ' ') %></p>
+    <%= link_to article.title.gsub('_', ' ').capitalize, asset_path("/articles/house_manual.pdf")  %>
+
+    <%# <iframe src=<%= "/articles/#{article.title}.pdf" %> width="600" height="780" style="border: none;"> </iframe> %>
+  <% end %>
+</div>
