--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,18 +1,9 @@
 <div class="container-fluid">
   <h1>Current Stay</h1>
-  <p>Check in: <%= @reservation.check_in_date.strftime("%b %d (%a) #{(@reservation.arrival_time + 9.hours).strftime("%l%p")}~") %></p>
-  <p>Check out: <%= @reservation.check_out_date.strftime("%b %d (%a) ~#{(@reservation.departure_time + 9.hours).strftime("%l%p")}") %></p>
-  <p>Address: <%= @reservation.hotel.address %></p>
-  <p> <%= @reservation.hotel.name %> </p>
-  <p>Room Number: <%= @reservation.room_number %></p>
-  <p>Reservation Number: <%= @reservation.reservation_number %></p>
-  <p>Smartlock & Online Check-in: Please read before arrival</p>
-  <p>Amenities </p>
-  <button>Essentials</button>
-  <button>Bed and Bath</button>
-  <button>Kitchen</button>
-  <button>Others</button>
+  <%= image_tag 'SL_C_type.jpg', height:300 %>
+  <%= render 'shared/reservation_overview', reservation: @reservation %>
+  <%= render 'shared/article_cards', articles: @articles %>
+  <%= render 'shared/buddy.html.erb' %>
   <button class="btn btn-primary">Chat with L</button>
 </div>
 
-<%= render 'shared/article_cards', articles: @articles %>
