--- a/app/views/shared/_article_cards.html.erb
+++ b/app/views/shared/_article_cards.html.erb
@@ -1,6 +1,4 @@
-<div class="container-fluid">
-  <h1>Articles:</h1>
-</div>
+<h3>Guides</h3>
 <div class="container-fluid d-flex">
   <% articles.each do |article| %>
     <%= link_to  article_path(article.id), target: "_blank" do %>
