--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,29 +1,25 @@
 
-<%# index page %>
-<%#= link_to 'Reservations Index', reservations_path %>
+<div class="container-fluid p-0 d-flex flex-column" style="background-color: #F1EEE9; height: 100%">
 
-<%# show page for first reservation %>
-<%#= link_to '1st Reservation Show page', reservation_path %>
-<%= render 'shared/navbar' %>
-<div class="container-fluid p-0 d-flex flex-column" style="background-color: pink; height: 100%">
-  <div class="container-fluid d-flex h-50 justify-content-center" style="background-color: blue;">
-    <h5 class="align-self-center">Home Page for Concierge-L</h5>
-  </div>
+  <div class="container-fluid d-flex h-50 justify-content-center" style="background-color: #F1EEE9;">
+    <h1 class="align-self-center">Welcome to Concierge L</h1>
+ </div>
+
+ You Can
+<p><%= image_tag "icons/move-down.svg" %></p>
+
+   <p><%= image_tag "icons/time.svg" %></p>Customize check-in/out time
+   <p><%= image_tag "icons/towel.svg" %></p>Request free amenities
+   <p><%= image_tag "icons/pin-heart.svg" %></p>Discover gems in the neighborhood
+  <p><%= image_tag "icons/meeting.svg" %></p>Find like-minded dining buddies
+
+
+  <h1 class="align-self-left">What Are You Waiting For?</h1>
+
 
   <div class="container-fluid h-50 justify-content-center">
-    <ul>
-      <li><button type="button" class="btn btn-outline-primary mt-2">
-        <%= link_to 'Reservations Index', reservations_path %></button>
-      </li>
-      <li><button type="button" class="btn btn-secondary mt-2">1st reservation</button></li>
-      <li><button type="button" class="btn btn-warning mt-2">chat</button></li>
-      <li><button type="button" class="btn btn-success mt-2">X</button></li>
-      <li><button type="button" class="btn btn-danger mt-2">X</button></li>
-      <li><button type="button" class="btn btn-info mt-2">X</button></li>
-      <li><button type="button" class="btn btn-light mt-2">X</button></li>
-      <li><button type="button" class="btn btn-dark mt-2">X</button></li>
-
-    </ul>
+      <button type="button" style="background-color: #B27C7E">Sign Up</button>
+      <button type="button" style="background-color: #00896A">Log In</button>
   </div>
 
 
