--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -5,5 +5,6 @@
   <%= render 'article_cards', articles: @articles %>
   <%= render 'buddy.html.erb' %>
   <button class="btn btn-primary">Chat with L</button>
+  <%= render 'change_times', reservation: @reservation %>
 </div>
 
