--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,6 +1,8 @@
 <%= link_to root_path do %>
   <i class="fas fa-arrow-left"></i>
 <% end %>
+<%= link_to 'Back', :back %>
+
   
   <div class="container">
     <h5>Upcoming Stays:</h5>
@@ -13,3 +15,5 @@
     <% end %>
   
   </div>
+
+<%= link_to 'Add your Reservation info', new_reservation_path %>
