--- a/app/views/reservations/_change_times.html.erb
+++ b/app/views/reservations/_change_times.html.erb
@@ -1,55 +1,70 @@
 <style>
-input[type=radio] {
+	.was-validated .form-check-input:valid~.form-check-label, .form-check-input.is-valid~.form-check-label {
+		border: 1px solid red;
+		border-radius: 5px;
+		color: red;
+	}
+
+	.was-validated .form-check-input:valid~.form-check-label, .form-check-input.is-valid:checked~.form-check-label {
+		color: white;
+		background-color: #D43B3B;
+	}
+	
+	input[type=radio] {
 		display:none;
 	}
 
 	input[type=radio] + label {
-		display:inline-block;
-		margin:-2px;
+		margin: -2px;
 		padding: 4px 12px;
 		margin-bottom: 0;
 		font-size: 14px;
 		line-height: 20px;
-		color: #333;
+		color: #D43B3B;
 		text-align: center;
-		text-shadow: 0 1px 1px rgba(255,255,255,0.75);
 		vertical-align: middle;
 		cursor: pointer;
-		background-color: #f5f5f5;
-		background-image: -moz-linear-gradient(top,#fff,#e6e6e6);
-		background-image: -webkit-gradient(linear,0 0,0 100%,from(#fff),to(#e6e6e6));
-		background-image: -webkit-linear-gradient(top,#fff,#e6e6e6);
-		background-image: -o-linear-gradient(top,#fff,#e6e6e6);
-		background-image: linear-gradient(to bottom,#fff,#e6e6e6);
-		background-repeat: repeat-x;
-		border: 1px solid #ccc;
-		border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-		border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
-		border-bottom-color: #b3b3b3;
-		filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff',endColorstr='#ffe6e6e6',GradientType=0);
-		filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-		-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-		-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
-		box-shadow: inset 0 1px 0 rgba(255,255,255,0.2),0 1px 2px rgba(0,0,0,0.05);
+		background-color: white;
+		border: 1px solid #D43B3B;
+		margin-bottom: 4px;
+		min-width: 150px;
 	}
 
-	input[type=radio]:checked + label {
-		   background-image: none;
-		outline: 0;
-		-webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-		-moz-box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-		box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
-			background-color:#e0e0e0;
+	.form-check {
+		padding-left: 0;
 	}
 </style>
 
 <p>check-in</p>
 <p><%= reservation.check_in_date.strftime('%b %e') %></p>
 
+<div class="container d-flex">
+	<div class="container-radio d-flex text-center border-right" style="flex-direction: column; width: 200px;">
+		<% in_time = Time.find_zone('Tokyo').local(2020, 1, 1, 6) %>
+		<%= simple_form_for reservation do |f| %>
+			<%= f.input :arrival_time, as: :radio_buttons, collection: [
+				[in_time, '3:00PM~ (¥0)'],
+				[in_time - 1.hour, '2:00PM (¥1,000)'],
+				[in_time - 2.hour, '1:00PM (¥2,000)'],
+				[in_time - 3.hour, '12:00PM (¥3,000)'],
+				[in_time - 4.hour, '11:00AM (¥4,000)'],
+				[in_time - 5.hour, '10:00AM (¥5,000)']
+			], label_method: :second, value_method: :first %>
+		<% end %>
+	</div>
 
-<input type="radio" id="radio1" name="radios" value="all" checked>
-       <label for="radio1">iPhone</label>
-    <input type="radio" id="radio2" name="radios"value="false">
-       <label for="radio2">Galaxy S IV</label>
-    <input type="radio" id="radio3" name="radios" value="true">
-       <label for="radio3">Nexus S</label>
+	<div class="container-radio d-flex text-center" style="flex-direction: column; width: 200px;">
+		<% out_time = Time.find_zone('Tokyo').local(2020, 1, 1, 6) %>
+		<%= simple_form_for reservation do |f| %>
+			<%= f.input :departure_time, as: :radio_buttons, collection: [
+				[out_time, '~10:00AM (¥0)'],
+				[out_time - 1.hour, '~11:00AM (¥1,000)'],
+				[out_time - 2.hour, '~12:00PM (¥2,000)'],
+				[out_time - 3.hour, '~1:00PM (¥3,000)'],
+				[out_time - 4.hour, '~2:00PM (¥4,000)'],
+				[out_time - 5.hour, '~3:00PM (¥5,000)']
+			], label_method: :second, value_method: :first %>
+		<% end %>
+	</div>
+</div>
+
