--- a/app/views/reservations/_change_times.html.erb
+++ b/app/views/reservations/_change_times.html.erb
@@ -38,10 +38,13 @@
 <p>check-in</p>
 <p><%= reservation.check_in_date.strftime('%b %e') %></p>
 
-<div class="container d-flex">
-	<div class="container-radio d-flex text-center border-right" style="flex-direction: column; width: 200px;">
-		<% in_time = Time.find_zone('Tokyo').local(2020, 1, 1, 6) %>
-		<%= simple_form_for reservation do |f| %>
+
+
+<div class="container-fluid d-flex w-100">
+	<%= simple_form_for reservation, html: { class: "d-flex", style: "flex-wrap: wrap;"} do |f| %>
+		<div class="d-flex text-center border-right" style="flex-direction: column; flex-basis: 50%;">
+			<% in_time = Time.find_zone('Tokyo').local(2000, 01, 01, 6) %>
+			<% out_time = Time.find_zone('Tokyo').local(2000, 1, 1, 1) %>
 			<%= f.input :arrival_time, as: :radio_buttons, collection: [
 				[in_time, '3:00PM~ (¥0)'],
 				[in_time - 1.hour, '2:00PM (¥1,000)'],
@@ -49,13 +52,10 @@
 				[in_time - 3.hour, '12:00PM (¥3,000)'],
 				[in_time - 4.hour, '11:00AM (¥4,000)'],
 				[in_time - 5.hour, '10:00AM (¥5,000)']
-			], label_method: :second, value_method: :first %>
-		<% end %>
-	</div>
+			], checked: [reservation.arrival_time, '3:00PM~ (¥0)'], label_method: :second, value_method: :first %>
+		</div>
 
-	<div class="container-radio d-flex text-center" style="flex-direction: column; width: 200px;">
-		<% out_time = Time.find_zone('Tokyo').local(2020, 1, 1, 6) %>
-		<%= simple_form_for reservation do |f| %>
+		<div class="d-flex text-center" style="flex-direction: column; flex-basis: 50%;">
 			<%= f.input :departure_time, as: :radio_buttons, collection: [
 				[out_time, '~10:00AM (¥0)'],
 				[out_time - 1.hour, '~11:00AM (¥1,000)'],
@@ -63,8 +63,9 @@
 				[out_time - 3.hour, '~1:00PM (¥3,000)'],
 				[out_time - 4.hour, '~2:00PM (¥4,000)'],
 				[out_time - 5.hour, '~3:00PM (¥5,000)']
-			], label_method: :second, value_method: :first %>
-		<% end %>
-	</div>
-</div>
+			], checked: reservation.departure_time, label_method: :second, value_method: :first %>
+		</div>
 
+		<%= f.button :submit, class: "btn btn-primary w-100" %>
+	<% end %>
+</div>
