--- a/app/views/reservation/reservation_form.html.erb
+++ b/app/views/reservation/reservation_form.html.erb
@@ -10,11 +10,11 @@
                 input_html: { autocomplete: "title" }%
     <%= f.input :arrival_date,
                 required: true,
-                input_html: { autocomplete: "datetime" }%
+                input_html: { autocomplete: "datetime" }%>
   </div>
 
   <div class="mt-3">
     <%= f.next class: 'btn btn-primary button-green' %>
-    <%= link_to 'Cancel', '/home', class: 'btn btn-secondary ml-2' %>
+    <%= link_to 'Cancel', reservations_path, class: 'btn btn-secondary ml-2' %>
   </div>
 <% end %>
