--- a/app/views/reservations/_change_times.html.erb
+++ b/app/views/reservations/_change_times.html.erb
@@ -38,24 +38,28 @@
 <p>check-in</p>
 <p><%= reservation.check_in_date.strftime('%b %e') %></p>
 
-
-
 <div class="container-fluid d-flex w-100">
 	<%= simple_form_for reservation, html: { class: "d-flex", style: "flex-wrap: wrap;"} do |f| %>
+
 		<div class="d-flex text-center border-right" style="flex-direction: column; flex-basis: 50%;">
-			<% in_time = Time.find_zone('Tokyo').local(2000, 01, 01, 6) %>
-			<% out_time = Time.find_zone('Tokyo').local(2000, 1, 1, 1) %>
+			<p>Check-in</p>
+			<p><%= reservation.check_in_date.strftime('%b %e') %></p>
+			<% in_time = Time.find_zone('Tokyo').local(2000, 1, 1, 15) %>
+			<% out_time = Time.find_zone('Tokyo').local(2000, 1, 1, 10) %>
+			<% arrivals = ['3:00PM~ (¥0)', '2:00PM (¥1,000)', '1:00PM (¥2,000)', '12:00PM (¥3,000)', '11:00AM (¥4,000)', '11:00AM (¥4,000)'] %>
 			<%= f.input :arrival_time, as: :radio_buttons, collection: [
-				[in_time, '3:00PM~ (¥0)'],
-				[in_time - 1.hour, '2:00PM (¥1,000)'],
-				[in_time - 2.hour, '1:00PM (¥2,000)'],
-				[in_time - 3.hour, '12:00PM (¥3,000)'],
-				[in_time - 4.hour, '11:00AM (¥4,000)'],
-				[in_time - 5.hour, '10:00AM (¥5,000)']
-			], checked: [reservation.arrival_time, '3:00PM~ (¥0)'], label_method: :second, value_method: :first %>
+				[in_time, 				 '3:00PM~ (¥0)'			],
+				[in_time - 1.hour, '2:00PM (¥1,000)'	],
+				[in_time - 2.hour, '1:00PM (¥2,000)'	],
+				[in_time - 3.hour, '12:00PM (¥3,000)'	],
+				[in_time - 4.hour, '11:00AM (¥4,000)'	],
+				[in_time - 5.hour, '10:00AM (¥5,000)'	]
+			], checked: [reservation.arrival_time, ], label_method: :second, value_method: :first %>
 		</div>
 
 		<div class="d-flex text-center" style="flex-direction: column; flex-basis: 50%;">
+			<p>Check-out</p>
+			<p><%= reservation.check_out_date.strftime('%b %e') %></p>
 			<%= f.input :departure_time, as: :radio_buttons, collection: [
 				[out_time, '~10:00AM (¥0)'],
 				[out_time - 1.hour, '~11:00AM (¥1,000)'],
