--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,7 +1,6 @@
 <%= link_to root_path do %>
-  <i class="fas fa-arrow-left"></i>
+  <i class="fas fa-arrow-left" style="position: absolute; top: 10px; left: 10px;"></i>
 <% end %>
-<%= link_to 'Back', :back %>
 
   
   <div class="container">
