--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -16,6 +16,6 @@
 
   <div class="mt-3">
     <%= f.submit class: 'btn btn-primary button-green' %>
-    <%= link_to 'Cancel', '/home', class: 'btn btn-secondary ml-2' %>
+    <%= link_to 'Cancel', reservations_path, class: 'btn btn-secondary ml-2' %>
   </div>
 <% end %>
