--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,3 +1,7 @@
+<%= link_to reservations_path do %>
+  <i class="fas fa-arrow-left" style="position: absolute; top: 10px; left: 10px;"></i>
+<% end %>
+
 <div class="container-fluid">
   <h1>Current Stay</h1>
   <%= image_tag 'SL_C_type.jpg', height:300 %>
