--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -6,3 +6,5 @@
   <%= render 'buddy.html.erb' %>
   <button class="btn btn-primary">Chat with L</button>
 </div>
+
+<%= link_to 'Amenities', reservation_amenities_path(@reservation) %>
