--- a/app/views/amenities/index.html.erb
+++ b/app/views/amenities/index.html.erb
@@ -2,7 +2,9 @@
   <i class="fas fa-arrow-left"></i>
 <% end %>
 
-<h1>Amenities:</h1>
-<% @amenities.each do |amenity| %>
-  <p><%= image_tag "icons/#{amenity.name}.svg" %><%= amenity.name %></p>
-<% end %>
+<div class="container">
+  <h1>Amenities:</h1>
+  <% @amenities.each do |amenity| %>
+    <p><%= image_tag("icons/#{amenity.name.gsub(' ', '_').gsub('/', ':').downcase}.svg", style: "width: 20px; height: 20px;") %><%= amenity.name.capitalize %></p>
+  <% end %>
+</div>
