Changed show page styling and defined colors

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -5,6 +5,11 @@ $red: #FD1015;
 $blue: #167FFB;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$green: #00896A;
+$light-purple: #B27C7E;
+$bright-pink: #EA504E;
+$pale-pink: #FDF5F6;
+$background-grey: #f1eee9;
+
