--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,38 @@
 .card-reservation {
-  
+
+}
+
+.card-question {
+    margin-left: -4px !important;
+    margin-right: -4px !important;
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card-element-1 {
+  flex-basis: 50%;
+    text-align: inherit !important;
+    height: 100% !important;
+    background: transparent !important;
+    border-width: initial !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    text-decoration: none !important;
+}
+
+.card-element-2 {
+    text-align: center !important;
+    height: 144px !important;
+    padding: 24px 16px 16px !important;
+    border-style: solid !important;
+    border-radius: 4px !important;
+    border-color: #EA504E !important;
+    overflow: hidden !important;
+}
+
+.card-element-3 {
+    display: inline-block !important;
+    padding-bottom: 8px !important;
 }
