--- a/app/views/reservations/_reservation_card.html.erb
+++ b/app/views/reservations/_reservation_card.html.erb
@@ -1,7 +1,8 @@
 
 <%= link_to reservation_path(reservation) do %>
   <div class="card-reservation">
-    <%= image_tag("hotel_1.jpg", height: '140', width: '300')  %>
+    <% room_type = (reservation.room_number % 10).to_s %>
+    <%= image_tag("room_#{room_type + (reservation.room_number == 101 ? 'a' : '')}.jpg")  %>
     <p><%= reservation.hotel.name %></p>
     <p><%= "#{reservation.check_in_date.strftime('%b %e')} - #{reservation.check_out_date.strftime('%b %e, %Y')}" %></p> 
   </div>  
