Show page edit and colors

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
 <p><%= image_tag "icons/move-down.svg" %></p>
 
    <p><%= image_tag "icons/time.svg" %></p>Customize check-in/out time
-   <p><%= image_tag "icons/towel.svg" %></p>Request free amenities
+   <p><%= image_tag "icons/towels_&_linens.svg" %></p>Request free amenities
    <p><%= image_tag "icons/pin-heart.svg" %></p>Discover gems in the neighborhood
   <p><%= image_tag "icons/meeting.svg" %></p>Find like-minded dining buddies
 
