--- a/app/views/reservations/_buddy.html.erb
+++ b/app/views/reservations/_buddy.html.erb
@@ -1,3 +1,6 @@
-<h2>More Delicious Together</h2>
-<p>You can participate / orgainize dining out or cooking sessions with other guests staying at Section L. Like-minded buddies can make your trip more fun. What are you waiting for?</p>
-<button class="btn btn-warning">Check out our community app</button>
+<div class="card-show-page font-grey">
+  <h5 class="font-bright-pink">More Delicious Together</h5>
+  <p>You can participate / orgainize dining out or cooking sessions with other guests staying at Section L.</p>
+  <p>Like-minded buddies can make your trip more fun. What are you waiting for?</p>
+  <a class="btn btn-primary button-full-width" target="_blank" href="http://friends-of-l.herokuapp.com/">Check out our community app</a>
+</div>
