--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -36,3 +36,18 @@
     display: inline-block !important;
     padding-bottom: 8px !important;
 }
+
+.card-show-page {
+  background-color: white;
+  width: 100%;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+.card-reservation-time {
+  display: flex;
+}
+
+.border-right {
+  border-right: 5px solid red
+}
