index page working

--- a/app/views/reservations/_reservation_card.html.erb
+++ b/app/views/reservations/_reservation_card.html.erb
@@ -3,7 +3,7 @@
   <div class="card-reservation">
     <% room_type = (reservation.room_number % 10).to_s %>
     <%= image_tag("room_#{room_type + (reservation.room_number == 101 ? 'a' : '')}.jpg")  %>
-    <p><%= reservation.hotel.name %></p>
+    <h5><%= reservation.hotel.name %></h5>
     <p><%= "#{reservation.check_in_date.strftime('%b %e')} - #{reservation.check_out_date.strftime('%b %e, %Y')}" %></p> 
   </div>  
 <% end %>
