--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -2,17 +2,18 @@
   <i class="fas fa-arrow-left" style="position: absolute; top: 10px; left: 10px;"></i>
 <% end %>
 
-  
-  <div class="container">
-    <h5>Upcoming Stays:</h5>
+  <h2 style="text-align: center; margin-top: 40px;">Your Stays</h2>
+  <div class="container-reservation">
+    <h5>Upcoming:</h5>
     <% @upcoming_reservations.each do |reservation| %>
       <%= render 'reservations/reservation_card', reservation: reservation %>
     <% end %>
-    <h5>Where you've stayed:</h5>
-    <% @past_reservations.each do |reservation| %>
-      <%= render 'reservations/reservation_card', reservation: reservation %>
+    <% if @past_reservations.length > 0 %>
+      <h5>Where you've stayed:</h5>
+      <% @past_reservations.each do |reservation| %>
+        <%= render 'reservations/reservation_card', reservation: reservation %>
+      <% end %>
     <% end %>
-  
   </div>
 
-<%= link_to 'Add your Reservation info', new_reservation_path %>
+<button class="btn btn-success"><%= link_to 'Add your Reservation info', new_reservation_path %></button>
