--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,3 +1,16 @@
 .button-full-width {
   width: 100%;
 }
+
+.reservation-buttons {
+  position: sticky;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  padding-bottom: 2px;  
+  bottom: 0;
+}
+.double-button {
+  flex-basis: 49%;
+  color: white !important;
+}
