--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,8 +1,10 @@
 <%= link_to root_path do %>
   <i class="fas fa-arrow-left" style="position: absolute; top: 10px; left: 10px;"></i>
 <% end %>
-
-  <h2 style="text-align: center; margin-top: 40px;">Your Stays</h2>
+  <div class="logo-container">
+    <%= image_tag 'logo', class: 'logo-sm' %>
+  </div>
+  <h2 style="text-align: center;">Your Stays</h2>
   <div class="container-reservation">
     <h5>Upcoming:</h5>
     <% @upcoming_reservations.each do |reservation| %>
@@ -16,4 +18,7 @@
     <% end %>
   </div>
 
-<button class="btn btn-success"><%= link_to 'Add your Reservation info', new_reservation_path %></button>
+<div class="reservation-buttons">
+  <%= link_to 'Book new', new_reservation_path, class: "btn btn-success double-button"%>
+  <%= link_to 'Find your Booking', new_reservation_path, class: "btn btn-success double-button"%>
+</div>
