--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,34 +1,50 @@
 <div class="container-fluid p-0 d-flex flex-column" style="background-color: #F1EEE9; height: 100%">
 
-  <div class="container-fluid d-flex h-50 justify-content-center" style="background-color: #F1EEE9;">
-    <h1 class="align-self-center">Welcome to Concierge L</h1>
- </div>
-
- You Can
-<p><%= image_tag "icons/move-down.svg" %></p>
-
-   <p><%= image_tag "icons/time.svg" %></p>Customize check-in/out time
-   <p><%= image_tag "icons/towel.svg" %></p>Request free amenities
-   <p><%= image_tag "icons/pin-heart.svg" %></p>Discover gems in the neighborhood
-  <p><%= image_tag "icons/meeting.svg" %></p>Find like-minded dining buddies
+  <div class="container-fluid d-flex h-50" style="background-color: #F1EEE9;">
+     </div>
+  <div class="container-fluid d-flex h-50 justify-content-center">
+    <%= image_tag("CONCIERGE_L.png", style: "width: 230px; height: 50px;") %>
+     </div>
 
 
-  <h1 class="align-self-left">What Are You Waiting For?</h1>
 
+ <div class="container font-green top-space">
+  <h2>You Can</h2>
+   </div>
+<div class="container-fluid d-flex justify-content-start">
+<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
+<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
+<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
+  </div>
 
-  <div class="container-fluid h-50 justify-content-center">
-      <button type="button" style="background-color: #B27C7E">Sign Up</button>
-      <button type="button" style="background-color: #00896A">
-        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-      </button>
+  <div class="container-fluid list-item-home top-space" >
+  <%= image_tag("icons/time.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
+  Customize check-in/out time
+    </div>
+
+  <div class="container-fluid list-item-home">
+  <%= image_tag("icons/towels_&_linens.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
+  Request free amenities
+    </div>
+
+  <div class="container-fluid list-item-home">
+    <%= image_tag("icons/pin-heart.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
+    Discover gems in the neighborhood
+    </div>
+
+  <div class="container-fluid list-item-home">
+    <%= image_tag("icons/meeting.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px; margin-top: 5px;") %>
+    Find like-minded dining buddies
+    </div>
+
+  <h5 class="left-text font-green">What Are You Waiting For?</h5>
+
+<%= link_to 'Sign Up', new_user_session_path, class: "btn btn-primary w-100" %>
 
       <% if user_signed_in? %>
-        <%= link_to "Index", reservations_path, class: "btn btn-dark" %>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-secondary" %>
+<%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-secondary w-100 top-space-2" %>
+        <% else %>
+<%= link_to "Login", user_session_path, class: "btn btn-success w-100 top-space-2" %>
       <% end %>
 
   </div>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn-primary" %>
-
-
-</div>
