--- a/app/views/reservations/edit.html.erb
+++ b/app/views/reservations/edit.html.erb
@@ -1,24 +1,44 @@
-<h1>What Brings You to Tokyo?</h1>
+  <div class="container-fluid p-0 d-flex flex-column" style="background-color: #F1EEE9; height: 100%">
 
-<div class="card-question">
+  <div class="container-fluid d-flex h-50" style="background-color: #F1EEE9;">
+     </div>
+  <div class="container-fluid d-flex h-50 justify-content-center top-space">
+    <%= image_tag("CONCIERGE_L.png", style: "width: 230px; height: 50px;") %>
+     </div>
 
-  <button type="button" class="card-element-1">
-<div class="card-element-2"><div class="card-element-3">
-  <p><%= image_tag "icons/bag.svg" %></p>BUSINESS
-
-  <button type="button" class="card-element-1">
-<div class="card-element-2"><div class="card-element-3">
-  <p><%= image_tag "icons/surfboard.svg" %></p>LEISURE
-
-  <button type="button" class="card-element-1">
-<div class="card-element-2"><div class="card-element-3">
-  <p><%= image_tag "icons/l-location.svg" %></p>BOTH
-
-  <button type="button" class="card-element-1">
-<div class="card-element-2"><div class="card-element-3">
-  <p><%= image_tag "icons/glasses-2.svg" %></p>ELSE
-
+  <div class="container font-green top-space">
+  <h4>What Brings You to Tokyo?</h4>
    </div>
 
-  <button class="btn btn-primary">Next</button>
-    <button class="btn btn-secondary">Skip</button>
+   <div class="container-fluid d-flex justify-content-start">
+<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
+<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
+<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
+  </div>
+
+
+    <div class="container-fluid list-item-home-2 top-space-2" >
+  <%= image_tag("icons/bag.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
+  BUSINESS
+    </div>
+
+      <div class="container-fluid list-item-home-2 top-space-2" >
+  <%= image_tag("icons/surfboard.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
+  LEISURE
+    </div>
+
+    <div class="container-fluid list-item-home-2 top-space-2" >
+  <%= image_tag("icons/l-location.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
+  BOTH
+    </div>
+
+        <div class="container-fluid list-item-home-2 top-space-2" >
+  <%= image_tag("icons/glasses-2.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
+  SOMETHING ELSE...
+    </div>
+
+
+<%= link_to 'Next', reservations_path, class: "btn btn-primary w-100 top-space" %>
+<%= link_to 'Skip', reservations_path, class: "btn btn-secondary w-100 top-space-2" %>
+
+
