--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -19,6 +19,6 @@
   </div>
 
 <div class="reservation-buttons">
-  <%= link_to 'Book new', new_reservation_path, class: "btn btn-success double-button"%>
+  <a href="section-l.com" target="_blank" class="btn btn-success double-button">Book New</a>
   <%= link_to 'Find your Booking', new_reservation_path, class: "btn btn-success double-button"%>
 </div>
