--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,21 +1,23 @@
-<h2>Your Info</h2>
+<div class="container">
+  <h2>Your Info</h2>
 
-<%= simple_form_for (@reservation) do |f| %>
-  <%= f.error_notification %>
+  <%= simple_form_for (@reservation) do |f| %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :reservation_number,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "reservation_number" },
-                error: 'Reservation number is required'%>
-    <%= f.input :check_in_date,
-                required: true,
-                input_html: { autocomplete: "check_in_date" }%>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :reservation_number,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "reservation_number" },
+                  error: 'Reservation number is required'%>
+      <%= f.input :check_in_date,
+                  required: true,
+                  input_html: { autocomplete: "check_in_date" }%>
+    </div>
 
-  <div class="mt-3">
-    <%= f.submit class: 'btn btn-primary button-green' %>
-    <%= link_to 'Cancel', reservations_path, class: 'btn btn-secondary ml-2' %>
-  </div>
-<% end %>
+    <div class="mt-3">
+      <%= f.submit class: 'btn btn-primary button-green' %>
+      <%= link_to 'Cancel', reservations_path, class: 'btn btn-secondary ml-2' %>
+    </div>
+  <% end %>
+</div>
