--- a/app/views/reservations/_buddy.html.erb
+++ b/app/views/reservations/_buddy.html.erb
@@ -2,5 +2,5 @@
   <h5 class="font-bright-pink">More Delicious Together</h5>
   <p>You can participate / orgainize dining out or cooking sessions with other guests staying at Section L.</p>
   <p>Like-minded buddies can make your trip more fun. What are you waiting for?</p>
-  <a class="btn btn-primary button-full-width" target="_blank" href="http://friends-of-l.herokuapp.com/">Check out our community app</a>
 </div>
+  <a class="btn btn-primary button-full-width mt-1" target="_blank" href="http://friends-of-l.herokuapp.com/">Check out our community app</a>
