--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -41,13 +41,15 @@
   background-color: white;
   width: 100%;
   border-radius: 5px;
-  padding: 20px;
+  padding: 20px 20px 5px 20px;
 }
 
 .card-reservation-time {
   display: flex;
+  padding: 10px 20px 5px 20px;
 }
 
 .border-right {
-  border-right: 5px solid red
+  border-right: 5px solid $font-grey;
+  padding-right: 22px;
 }
