--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -77,3 +77,21 @@
 .border-right {
   border-right: 5px solid red
 }
+
+
+.card-article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+  background-color: $light-purple;
+  color: white;
+  padding-bottom: 0;
+  img {
+    width: 48px;
+    filter: invert(1);
+    margin-top: 8px;
+    padding-bottom: 16px;
+  }
+}
