--- a/app/views/reservations/_article_cards.html.erb
+++ b/app/views/reservations/_article_cards.html.erb
@@ -1,7 +1,8 @@
-<div class="container-fluid d-flex">
+<div class="container-fluid container-articles">
   <% articles.each do |article| %>
     <%= link_to  article_path(article.id), target: "_blank" do %>
-      <div class="card text-center card-article mr-2 flex-fill align-items-center" style="height: 100px; border-radius: 5px; justify-content: center;">
+      <div class="card text-center card-article align-items-center">
+        <%= image_tag("icons/#{article.title.gsub(' ', '_').gsub('/', ':').downcase}.svg") %>
         <h6><%= article.title.gsub('_', ' ').capitalize %></h6>
       </div>
     <% end %>
