--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
   <div class="container-fluid d-flex h-50" style="background-color: #F1EEE9;">
      </div>
-  <div class="container-fluid d-flex h-50 justify-content-center">
+  <div class="container-fluid d-flex h-50 justify-content-center top-space-2">
     <%= image_tag("CONCIERGE_L.png", style: "width: 230px; height: 50px;") %>
      </div>
 
@@ -37,11 +37,12 @@
 
   <h5 class="left-text font-green">What Are You Waiting For?</h5>
 
-<%= link_to 'Sign Up', new_user_session_path, class: "btn btn-primary w-100" %>
 
       <% if user_signed_in? %>
+<%= link_to "Take me to Section L", reservations_path, class: "btn btn-primary w-100 top-space-2" %>
 <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-secondary w-100 top-space-2" %>
         <% else %>
+<%= link_to 'Sign Up', new_user_session_path, class: "btn btn-primary w-100" %>
 <%= link_to "Login", user_session_path, class: "btn btn-success w-100 top-space-2" %>
       <% end %>
 
