--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -2,7 +2,7 @@
   <i class="fas fa-arrow-left" style="position: absolute; top: 10px; left: 10px;"></i>
 <% end %>
   <div class="logo-container">
-    <%= image_tag 'logo', class: 'logo-sm' %>
+    <%= image_tag 'logo.png', class: 'logo-sm' %>
   </div>
   <h2 style="text-align: center;">Your Stays</h2>
   <div class="container-reservation">
