--- a/app/assets/stylesheets/components/_logo.scss
+++ b/app/assets/stylesheets/components/_logo.scss
@@ -1,7 +1,7 @@
 .logo-container {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  align-items: right;
+  position: absolute;
+  right: 0;
   padding-right: 20px;
 }
 
