--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   padding: 8px;
-  padding-bottom: 2px;  
+  padding-bottom: 2px;
   bottom: 0;
 }
 
@@ -19,3 +19,15 @@
   flex-basis: 49%;
   color: white !important;
 }
+
+
+.nav-pills .nav-link {
+  color: white;
+  background-color: $light-purple;
+}
+
+.nav-pills .nav-link.active {
+  color: $green;
+  background-color: $pale-pink;
+}
+
