--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,27 +10,29 @@
   <h2>You Can</h2>
    </div>
 <div class="container-fluid d-flex justify-content-start">
-<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
-<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
-<p><%= image_tag("icons/move-down.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %></p>
+  <%= image_tag("icons/arrow-down.svg", height:25) %>
+  <%= image_tag("icons/arrow-down.svg", height:25) %>
+  <%= image_tag("icons/arrow-down.svg", height:25) %>
+  <%= image_tag("icons/arrow-down.svg", height:25) %>
+  <%= image_tag("icons/arrow-down.svg", height:25) %>
   </div>
 
-  <div class="container-fluid list-item-home top-space" >
+  <div class="container-fluid list-item-home top-space font-grey" >
   <%= image_tag("icons/time.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
   Customize check-in/out time
     </div>
 
-  <div class="container-fluid list-item-home">
+  <div class="container-fluid list-item-home font-grey">
   <%= image_tag("icons/towels_&_linens.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
   Request free amenities
     </div>
 
-  <div class="container-fluid list-item-home">
+  <div class="container-fluid list-item-home font-grey">
     <%= image_tag("icons/pin-heart.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px;") %>
     Discover gems in the neighborhood
     </div>
 
-  <div class="container-fluid list-item-home">
+  <div class="container-fluid list-item-home font-grey">
     <%= image_tag("icons/meeting.svg", style: "width: 20px; height: 20px; margin-right: 10px; margin-bottom: 5px; margin-top: 5px;") %>
     Find like-minded dining buddies
     </div>
