--- a/app/views/shared/_chat.html.erb
+++ b/app/views/shared/_chat.html.erb
@@ -1,9 +1,9 @@
 <div class="container p-3" style="background-color: beige;">
   <h5>Messages:</h5>
   <div class="container">
-    <div id="messages" data-channel-subscribe="reservation" data-reservation-id="<%= reservation.id %>">
+    <div id="messages" class="d-flex flex-column" data-channel-subscribe="reservation" data-reservation-id="<%= reservation.id %>">
       <% reservation.messages.each do |message| %>
-        <div class="message-container card p-2 mb-1 w-50" id="message-<%= message.id %>">
+        <div class="message-container card rounded p-2 mb-1 w-50 <%= 'align-self-end' if message.user == current_user %>" id="message-<%= message.id %>">
           <div class="message-content">
             <p class="mb-1"><%= message.content %></p>
             <div class="text-right">
@@ -13,7 +13,7 @@
         </div>
       <% end %>
 
-      <div class="d-none" data-role="message-template">
+      <div class="d-none" data-role="message-template" >
 
         <div class="message-container card p-2 mb-1 w-50" id="id">
           <div class="message-content">
